Updated notebook examples

--- a/examples/BSS method comparison.ipynb
+++ b/examples/BSS method comparison.ipynb
@@ -13,8 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cocktail import nica, nica_nmf\n",
-    "from sklearn.decomposition import NMF"
+    "from sklearn.decomposition import NMF\n",
+    "from cocktail import nica, nica_nmf"
    ]
   },
   {
